<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="change_language_settings">Language Configuration</string>
    <string name="title_movie">Movie</string>
    <string name="description">Description</string>
    <string name="title_tv">Tv Series</string>
    <string name="title_account">Account</string>
    <string name="Description">Description</string>
    <string name="Genre">Genre</string>
    <string name="Duration">Duration</string>
    <string name="Director">Director</string>
    <string name="Sinopsis">Sinopsis</string>
    <string-array name="data_title">
        <item>A Star Is Born</item>
        <item>Alita</item>
        <item>Aquaman</item>
        <item>Bohemian Rhapsody</item>
        <item>Cold Persuit</item>
        <item>Creed 2</item>
        <item>Crimes</item>
        <item>Glass</item>
        <item>How To Train Your Dragon: The Hidden World</item>
        <item>Avanger:Infinity War</item>
        <item>Marry Queen</item>
        <item>Master Z</item>
        <item>Mortal Engine</item>
        <item>OverLord</item>
        <item>Ralp</item>
        <item>Robin Hood</item>
        <item>Serenity</item>
        <item>SpiderMan</item>
        <item>T-34</item>
    </string-array>
    <string-array name="data_description">
        <item>Seasoned musician Jackson Maine discovers and falls in love with struggling artist Ally. She has just about given up on her dream to make it big as a singer until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder and zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>As Goku investigates the destruction of the Southern Galaxy, Vegeta is taken to be King of the New Planet Vegeta, and to destroy the Legendary Super Saiyan, Broly</item>
        <item>In a series of escalating encounters, security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS “Arkansas” discovers that a coup d\'état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>A magical nanny employs music and adventure to help two neglected children become closer to their father.</item>
        <item>Many thousands of years in the future, Earth\’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>We don\'t have an overview translated in English. Help us expand our database by adding one.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
        <item>Earl Stone, a man in his 80s, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, he’s just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="data_genre">
        <item>Drama,Music,Romance</item>
        <item>Action,Adventure,Fantasy</item>
        <item>Action,Adventure,Sci-Fi</item>
        <item>Drama,Sci-Fi,Horror</item>
        <item>Biography, Drama, Music</item>
        <item>Action,Adventure,Sci-Fi</item>
        <item>Drama,Sport</item>
        <item>Action,Adventure,Comedy</item>
        <item>Animation,Action,Adventure</item>
        <item>Animation,Action,Adventure</item>
        <item>Drama,Sci-Fi,Thriller</item>
        <item>Action,Thriller</item>
        <item>Comedy,Family,Fantasy</item>
        <item>Action,Adventure,Fantasy</item>
        <item>Comedy,Drama</item>
        <item>Action,Adventure,Thriller</item>
        <item>Animation,Adventure,Action</item>
        <item>Action,Crime,Drama</item>
        <item>Crime,Drama,Thriller</item>
        <item>Action,Sci-Fi,Thriller</item>
    </string-array>
    <string-array name="data_duration">
        <item>2h 16min</item>
        <item>2h 33min</item>
        <item>2h 29min</item>
        <item>2h 4min</item>
        <item>2h 14min </item>
        <item>1h 54m</item>
        <item>2h 10m</item>
        <item>1h 48m</item>
        <item>1h 44m</item>
        <item>1h 40m</item>
        <item>2h 9m</item>
        <item>2h 2m</item>
        <item>2h 10m</item>
        <item>2h 8m</item>
        <item>1h 34m</item>
        <item>1h 56m</item>
        <item>1h 57m</item>
        <item>1h 57m</item>
        <item>1h 56m</item>
        <item>1h 52m</item>
    </string-array>
    <string-array name="data_director">
        <item>Bradley Cooper</item>
        <item>James Wan</item>
        <item>Anthony Russo,Joe Russo</item>
        <item>Sussane Biar</item>
        <item>Bryan Singer</item>
        <item>Travis Knight</item>
        <item>Steven Caple Jr</item>
        <item>Tim Miller</item>
        <item>Dean DeBlois</item>
        <item>Tatsuya Nagamine</item>
        <item>M. Night Shyamalan</item>
        <item>Donovan Marsh</item>
        <item>Rob Marshall</item>
        <item>Cristian Rivers</item>
        <item>Aris Nugraha</item>
        <item>Otto Bathurst</item>
        <item>Peter Ramsey</item>
        <item>Fade Alvarez</item>
        <item>Clint Eastwood</item>
        <item>Ruben Fleischer</item>
    </string-array>
    <string-array name="data_title_tvshow">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>Flash</item>
        <item>God</item>
        <item>Gotham</item>
        <item>Grey Anatomy</item>
        <item>Hanna</item>
        <item>Iron Fist</item>
        <item>Naruto Shipuden</item>
        <item>NCIS</item>
        <item>RiverDale</item>
        <item>Shameles</item>
        <item>SuperGirl</item>
        <item>Supranatural</item>
        <item>Simpson</item>
        <item>Umbrella</item>
        <item>Walking Dead</item>
    </string-array>
</resources>