<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail.MovieDetail">
    <ImageView
        android:id="@+id/iv_detail"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:textSize="24dp"
        android:textStyle="bold"
        android:text="@string/title_movie"
        app:layout_constraintStart_toEndOf="@+id/iv_detail"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="5dp"
        android:text="@string/Genre"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/iv_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/Duration"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/iv_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:text="@string/Director"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/iv_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/Genre"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/iv_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="73dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/Duration"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/iv_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

    <TextView
        android:id="@+id/tv_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:text="@string/Director"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/iv_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/Sinopsis"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail" />

    <TextView
        android:id="@+id/tv_sinopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/Description"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>